--- a/krishi_sakhi/requirements.txt
+++ b/krishi_sakhi/requirements.txt
@@ -1,13 +1,13 @@
-streamlit==1.28.1
+streamlit==1.29.0  # Slight upgrade: Fixes rich compat + ensures switch_page
 python-dotenv==1.0.0
 speechrecognition==3.10.0
 pydub==0.25.1
 huggingface-hub==0.19.4
 transformers==4.35.2
-torch==2.1.0+cpu
+torch==2.1.0  # Standard (CPU on cloud; no +cpu)
 requests==2.31.0
 streamlit-folium==0.15.0
 folium==0.15.1
-
-# New: Firebase for Push Notifications
 firebase-admin==6.2.0
+rich==13.7.1  # Pin <14 for Streamlit compat
+pandas==2.1.4  # For history (if used)
